--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# dependencies
+node_modules
+
+# sst
+.sst
+.build
+
+# opennext
+.open-next
+
+# misc
+.DS_Store
+
+# local env files
+.env*.local
+
 node_modules
 dist
 .wrangler
