--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,13 @@
 {
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "exclude": ["packages"],
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
-    "lib": [
-      "esnext"
-    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
     "types": [
       "@cloudflare/workers-types"
     ],
-    "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  },
+  }
 }
